# limiinal

./: .gitignore  Cargo.toml  README.md
.github/: pull_request_template.md
limiinal_client/: Cargo.toml  README.md
limiinal_client/src/: lib.rs  main.rs
limiinal_client/src/backend/: network.rs
limiinal_client/src/ui/: gui.rs  mod.rs
limiinal_relay/: Cargo.toml
limiinal_website/: package-lock.json  package.json  tailwind.config.js
limiinal_website/public/: index.html  manifest.json
limiinal_website/src/: App.css  App.js
limiinal_website/src/components/: AboutPage.jsx  LandingPage.jsx  Logo_Transparent.xcf
src/: main.rs
src/backend/: network.rs
src/ui/: gui.rs  mod.rs
test_connection_docker/: .gitignore  client2.Dockerfile  docker-compose.yml  relay_server.Dockerfile
